<resources>
    <string name="app_name">Chiyeuminhem</string>
    <!-- Authentication -->
    <string name="have_account">Đã có tài khoản?</string>
    <string name="login">Đăng nhập</string>
    <!-- Login -->
    <string name="login_title">Chào mừng trở lại</string>
    <string name="login_subtitle">Đăng nhập để tiếp tục hành trình của bạn</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="brand_name">CHIYEUMINHEM</string>

    <string name="register_title">Tạo tài khoản</string>
    <string name="register_subtitle">Nhập thông tin của bạn để bắt đầu</string>

    <string name="full_name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>

    <string name="create_account">Tạo tài khoản</string>
    <string name="or">Hoặc</string>
    <string name="continue_google">Tiếp tục với Google</string>
    <string name="already_have_account">Đã có tài khoản?  Đăng nhập</string>
</resources>